Added public api with minimum limiter
