# api/handlers/entity.go
@@ -95,6 +95,52 @@ func (h *Handler) UpdateEntity(c *fiber.Ctx) error {
 	return h.handleResponse(c, http.OK, response, "update_entity", "")
 }
 
+// PatchUpdateEntity godoc
+// @Security ApiKeyAuth
+// @ID update_entity
+// @Router /client-api/entity/{slug}/update/{id} [PATCH]
+// @Summary Patch Update Entity
+// @Description Patch Update Entity
+// @Accept json
+// @Produce json
+// @Tags Entity
+// @Param slug path string true "Entity Slug"
+// @Param id path string true "Entity ID"
+// @Param entity body models.Entity true "Update Entity"
+// @Success 200 {object} http.Response{data=models.Entity}
+// @Response 400 {object} http.Response{data=string} "Bad Request"
+// @Failure 500 {object} http.Response{data=string} "Server Error"
+func (h *Handler) PatchUpdateEntity(c *fiber.Ctx) error {
+	slug := c.Params("slug")
+	if slug == "" {
+		return h.handleResponse(c, http.BadRequest, nil, "invalid_slug", "slug is required")
+	}
+
+	var entity = dynamic_service.Entity{
+		Data: &structpb.Struct{},
+	}
+	entity.Slug = slug
+	entity.XId = c.Params("id")
+	entity.Location = c.Get("location")
+
+	if entity.XId == "" {
+		return h.handleResponse(c, http.BadRequest, nil, "invalid_id", "id is required")
+	}
+
+	if err := entity.Data.UnmarshalJSON(c.Body()); err != nil {
+		return h.handleResponse(c, http.BadRequest, nil, "unmarshal_entity", err.Error())
+	}
+
+	resp, err := h.services.EntityService().UpdatePatch(c.Context(), &entity)
+	if err != nil {
+		return h.handleResponse(c, http.InternalServerError, nil, "update_entity", err.Error())
+	}
+
+	response := resp.Data.AsMap()
+
+	return h.handleResponse(c, http.OK, response, "update_entity", "")
+}
+
 // DeleteEntity godoc
 // @Security ApiKeyAuth
 // @ID delete_entity
@@ -174,7 +220,7 @@ func (h *Handler) GetEntity(c *fiber.Ctx) error {
 
 // GetAll godoc
 // @Security ApiKeyAuth
-// @ID get_all
+// @ID get_all_post
 // @Router /client-api/entity/{slug}/get-all [POST]
 // @Param location header string false "Location" default("Asia/Tashkent")
 // @Summary Get All Entities
@@ -192,7 +238,7 @@ func (h *Handler) GetEntity(c *fiber.Ctx) error {
 // @Success 200 {object} http.Response{data=models.Entity} "Entities"
 // @Response 400 {object} http.Response{data=string} "Bad Request"
 // @Failure 500 {object} http.Response{data=string} "Server Error"
-func (h *Handler) GetAllEntity(c *fiber.Ctx) error {
+func (h *Handler) GetAllEntityPost(c *fiber.Ctx) error {
 	slug := c.Params("slug")
 	if slug == "" {
 		return h.handleResponse(c, http.BadRequest, nil, "invalid_slug", "slug is required")
@@ -224,6 +270,68 @@ func (h *Handler) GetAllEntity(c *fiber.Ctx) error {
 			return h.handleResponse(c, http.BadRequest, nil, "unmarshal_entity", err.Error())
 		}
 	}
+
+	resp, err := h.services.EntityService().GetAll(c.Context(), &filter)
+	if err != nil {
+		return h.handleResponse(c, http.InternalServerError, nil, "get_entity_list", err.Error())
+	}
+
+	var response models.GetAllEntityResponse
+
+	for _, entity := range resp.Entities {
+		response.Entities = append(response.Entities, entity.AsMap())
+	}
+
+	response.Count = resp.Count
+
+	return h.handleResponse(c, http.OK, response, "get_entity_list", "")
+}
+
+// GetAllEntityGet godoc
+// @Security ApiKeyAuth
+// @ID get_all_get
+// @Router /client-api/entity/{slug}/get-all [GET]
+// @Param location header string false "Location" default("Asia/Tashkent")
+// @Summary Get All Entities
+// @Description Get All Entities
+// @Accept json
+// @Produce json
+// @Tags Entity
+// @Param slug path string true "Entity Slug"
+// @Param offset query int false "Offset"
+// @Param limit query int false "Limit"
+// @Param sort query string false "Sort"
+// @Param order query string false "Order"
+// @Param search query string false "Search"
+// @Success 200 {object} http.Response{data=models.Entity} "Entities"
+// @Response 400 {object} http.Response{data=string} "Bad Request"
+// @Failure 500 {object} http.Response{data=string} "Server Error"
+func (h *Handler) GetAllEntityGet(c *fiber.Ctx) error {
+	slug := c.Params("slug")
+	if slug == "" {
+		return h.handleResponse(c, http.BadRequest, nil, "invalid_slug", "slug is required")
+	}
+
+	offset, err := h.getOffsetParam(c)
+	if err != nil {
+		return h.handleResponse(c, http.BadRequest, nil, "get_offset", err.Error())
+	}
+
+	limit, err := h.getLimitParam(c)
+	if err != nil {
+		return h.handleResponse(c, http.BadRequest, nil, "get_limit", err.Error())
+	}
+
+	var filter = dynamic_service.GetAllRequest{
+		Data: &structpb.Struct{},
+	}
+	filter.Slug = slug
+	filter.Offset = int32(offset)
+	filter.Limit = int32(limit)
+	filter.Sort = c.Query("sort")
+	filter.Order = c.Query("order")
+	filter.Search = c.Query("search")
+	filter.Location = c.Get("location")
 
 	resp, err := h.services.EntityService().GetAll(c.Context(), &filter)
 	if err != nil {
@@ -317,7 +425,7 @@ func (h *Handler) GetJoinEntity(c *fiber.Ctx) error {
 // GetAllService godoc
 // @Security ApiKeyAuth
 // @ID get_all_service
-// @Router /client-api/service/{slug}/get-all [POST]
+// @Router /client-api/service/{slug}/get-all [GET]
 // @Param location header string false "Location" default("Asia/Tashkent")
 // @Summary Get All Services
 // @Description Get All Services
@@ -375,12 +483,6 @@ func (h *Handler) GetAllServices(c *fiber.Ctx) error {
 	filter.Order = c.Query("order")
 	filter.Search = c.Query("search")
 	filter.Location = c.Get("location")
-
-	if len(c.Body()) > 5 {
-		if err := filter.Data.UnmarshalJSON(c.Body()); err != nil {
-			return h.handleResponse(c, http.BadRequest, nil, "unmarshal_entity", err.Error())
-		}
-	}
 
 	resp, err := h.services.EntityService().GetAll(c.Context(), &filter)
 	if err != nil {
